--- a/src/Components/SalonCard/SalonCard.css
+++ b/src/Components/SalonCard/SalonCard.css
@@ -16,14 +16,16 @@
 
 
 
-.s-card{
-    width: 32%;
+.s-card {
+    width: 30%;
+    box-sizing: border-box;
     text-align: start;
     box-shadow: 0 5px 25px 2px rgba(0, 0, 0, 0.11);
     border-radius: 7px;
     cursor: pointer;
-    padding: 1rem .8rem;
-}
+    padding: 1rem;
+    margin: 1rem; /* Adjust margin as needed */
+  }
 
 
 .s-image{
