--- a/src/Components/SalonCard/SalonCard.css
+++ b/src/Components/SalonCard/SalonCard.css
@@ -11,7 +11,7 @@
 .saloncard{
     margin-top: 3rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 
